[project]
name = "comfyui-various"
description = "Nodes: JWInteger, JWFloat, JWString, JWImageLoadRGB, JWImageResize, ..."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/jamesWalker55/comfyui-various"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-various"
Icon = ""
